<resources>
    <string name="app_name">App Lock</string>
    <string name="version">1.0</string>
    <string name="copyright">All rights reserved &#169; 2016 </string>
    <string name="inc">TeamProject Inc.</string>
    <string name="locked_apps">Locked Apps</string>

    <string name="help">Help,Feedback</string>
    <string name="settings">Settings...</string>
    <string name="about">About.</string>
    <string name="sample_text">Hello</string>
    <string name="unlock">Un-lock</string>
    <string name="start_button">Start</string>
    <string name="image">Start_screen image</string>
    <string name="first_screen_message">App Lock Keeps your texts(SMS),call logs,contacts,photos,apps private.</string>
    <string name="empty_message">You Havent Lock Any App use + to Lock Your Apps</string>
    <string name="hint_pin">Enter PIN</string>
    <string name="text">*</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="numx">&#x21E4;</string>
    <string name="ok">SET</string>
    <string name="desc">Desc</string>
    <string name="backbutton">&#8592;</string>
    <string name="cpin_hint">Enter Your PIN</string>
    <string name="ok_1">OK</string>
    <string name="message_setpin">Please SET Your 4 Digit PIN.</string>
    <string name="enter">&#8626;</string>
    <string name="lpin">Pin</string>
    <string name="limage">Image</string>
    <string name="lpattern">Pattern</string>
    <string name="lcolor">Color</string>
    <string name="set_image">set Sequence Images</string>


    <!-- SharedPreferences -->
    <string name="SHARED_PREFERENCE">SHARED_PREFERENCE</string>
    <string name="LOCK_TYPE_SELECTED">LOCK_TYPE_SELECTED</string>
    <string name="LOCKED_APPS">LOCKED_APPS</string>
    <string name="LOCKED_STATES">LOCKED_STATES</string>
    <string name="PIN">PIN</string>
    <string name="PREVIOUS_ACTIVITY">PREVIOUS_ACTIVITY</string>
    <string name="EMPTY_APPS">EMPTY_APPS</string>
</resources>
