<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.teamproject.applock.Pin_initialize">

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ok_1"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="setPin"
        style="@style/numpad"
        />


    <TableLayout
        android:id="@+id/tableview"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/enter">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            >
            <Button
                android:id="@+id/item1"
                style="@style/numpad"
                android:text="@string/num1"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item2"
                style="@style/numpad"
                android:text="@string/num2"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item3"
                style="@style/numpad"
                android:text="@string/num3"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/item4"
                style="@style/numpad"
                android:text="@string/num4"
                android:onClick="enterPin"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/item5"
                style="@style/numpad"
                android:text="@string/num5"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item6"
                style="@style/numpad"
                android:text="@string/num6"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/item7"
                style="@style/numpad"
                android:text="@string/num7"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item8"
                style="@style/numpad"
                android:text="@string/num8"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item9"
                style="@style/numpad"
                android:text="@string/num9"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/itemx"
                style="@style/numpad"
                android:text="@string/numx"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/item0"
                style="@style/numpad"
                android:text="@string/num0"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
            <Button
                android:id="@+id/itemE"
                style="@style/numpad"
                android:text="@string/backbutton"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:onClick="enterPin"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pin"
        android:hint="@string/cpin_hint"
        android:layout_above="@id/tableview"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:background="#FFFFFF"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="visible"
        android:password="true"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:text="@string/message_setpin"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_above="@id/pin"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:visibility="visible"
        />
    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pin_back"
        android:scaleType="fitXY"
        android:layout_above="@id/pin"
        android:contentDescription="@string/desc" />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/icon_about"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp" />

</RelativeLayout>
