<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTintMode="src_atop"
    tools:context="com.teamproject.applock.Pin_Check">
    <Button
        android:id="@+id/c_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_1"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="checkPin"
        style="@style/numpad"
        />
    <TableLayout
        android:id="@+id/c_tableview"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_height="220dp"
        android:layout_above="@+id/c_enter">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/citem1"
                style="@style/numpad"
                android:text="@string/num1"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem2"
                style="@style/numpad"
                android:text="@string/num2"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem3"
                style="@style/numpad"
                android:text="@string/num3"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/citem4"
                style="@style/numpad"
                android:text="@string/num4"
                android:onClick="enterPinc"
                android:textAlignment="center"
                />
            <Button
                android:id="@+id/citem5"
                style="@style/numpad"
                android:text="@string/num5"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem6"
                style="@style/numpad"
                android:text="@string/num6"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/citem7"
                style="@style/numpad"
                android:text="@string/num7"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem8"
                style="@style/numpad"
                android:text="@string/num8"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem9"
                style="@style/numpad"
                android:text="@string/num9"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/citemx"
                style="@style/numpad"
                android:text="@string/numx"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citem0"
                style="@style/numpad"
                android:text="@string/num0"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
            <Button
                android:id="@+id/citemE"
                style="@style/numpad"
                android:text="@string/backbutton"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:onClick="enterPinc"
                />
        </TableRow>
    </TableLayout>

    <TextView
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/c_pin"
        android:hint="@string/cpin_hint"
        android:layout_above="@id/c_tableview"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="visible"
        android:password="true"
        android:paddingBottom="5dp"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="You Entered Wrong PIN"
        android:layout_above="@id/c_tableview"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:textColor="#ff0000"
        android:textSize="18sp"
        android:textAlignment="center"
        android:visibility="invisible"
        android:paddingBottom="5dp"/>

    <ImageView
        android:id="@+id/cimage_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/c_pin"
        android:src="@drawable/pin_back"
        android:scaleType="fitXY"
        android:contentDescription="@string/desc" />
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/icon_about"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp" />
</RelativeLayout>
