<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeeeb"
    tools:context="com.teamproject.applock.About">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/icon_about"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name2"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_below="@id/icon_about"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ic_version"
        android:text="@string/version"
        android:gravity="center"
        android:layout_below="@id/app_name2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_list"
        android:layout_below="@id/ic_version"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"></ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/copyright"
        android:text="@string/inc"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inc"
        android:text="@string/copyright"
        android:gravity="center"
        android:layout_above="@+id/copyright"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
